--- a/bscfg/config.json
+++ b/bscfg/config.json
@@ -1,38 +1,1 @@
-{
- "Achievements": {}, 
- "Auto Account State": "Server", 
- "Auto Balance Teams": true, 
- "Campaigns": {}, 
- "Free-for-All Playlist Randomize": true, 
- "Free-for-All Playlist Selection": "__default__", 
- "Free-for-All Playlists": {}, 
- "Lang": "English", 
- "Local Account Name": "Server22637", 
- "Player Profiles": {
-  "__account__": {
-   "character": "Spaz", 
-   "color": [
-    0.5, 
-    0.25, 
-    1.0
-   ], 
-   "highlight": [
-    0.5, 
-    0.25, 
-    1.0
-   ]
-  }
- }, 
- "Port": 43210, 
- "Show Tutorial": false, 
- "Signed In Last Session": false, 
- "Team Tournament Playlist Randomize": true, 
- "Team Tournament Playlist Selection": "__default__", 
- "Team Tournament Playlists": {}, 
- "launchCount": 1, 
- "lc14": 1, 
- "lc14146": 1, 
- "lc14173": 1, 
- "lc14292": 1, 
- "lc14c": 1
-}
+{"lc14173": 1, "Show Tutorial": false, "launchCount": 1, "lc14292": 1, "Team Tournament Playlists": {}, "Player Profiles": {"__account__": {"color": [0.5, 0.25, 1.0], "highlight": [0.5, 0.25, 1.0], "character": "Spaz"}}, "Achievements": {}, "Team Tournament Playlist Selection": "__default__", "Campaigns": {}, "Signed In Last Session": false, "lc14": 1, "Lang": "English", "Team Tournament Playlist Randomize": true, "Free-for-All Playlists": {}, "lc14146": 1, "lc14c": 1, "Auto Balance Teams": true, "Local Account Name": "Server22637", "Free-for-All Playlist Randomize": true, "Auto Account State": "Server", "Free-for-All Playlist Selection": "__default__", "Port": 43210}
