fixed ice blast

--- a/bscfg/config.json
+++ b/bscfg/config.json
@@ -1,1 +1,484 @@
-{"lc14173": 1, "Show Tutorial": false, "launchCount": 1, "lc14292": 1, "Team Tournament Playlists": {}, "Player Profiles": {"__account__": {"color": [0.5, 0.25, 1.0], "highlight": [0.5, 0.25, 1.0], "character": "Spaz"}}, "Achievements": {}, "Team Tournament Playlist Selection": "__default__", "Campaigns": {}, "Signed In Last Session": false, "lc14": 1, "Lang": "English", "Team Tournament Playlist Randomize": true, "Free-for-All Playlists": {}, "lc14146": 1, "lc14c": 1, "Auto Balance Teams": true, "Local Account Name": "Server22637", "Free-for-All Playlist Randomize": true, "Auto Account State": "Server", "Free-for-All Playlist Selection": "__default__", "Port": 43210}
+{
+ "Achievements": {
+  "Boom Goes the Dynamite": {
+   "Complete": false
+  }, 
+  "Boxer": {
+   "Complete": false
+  }, 
+  "Dual Wielding": {
+   "Complete": false
+  }, 
+  "Flawless Victory": {
+   "Complete": false
+  }, 
+  "Free Loader": {
+   "Complete": false
+  }, 
+  "Gold Miner": {
+   "Complete": false
+  }, 
+  "Got the Moves": {
+   "Complete": false
+  }, 
+  "In Control": {
+   "Complete": false
+  }, 
+  "Last Stand God": {
+   "Complete": false
+  }, 
+  "Last Stand Master": {
+   "Complete": false
+  }, 
+  "Last Stand Wizard": {
+   "Complete": false
+  }, 
+  "Mine Games": {
+   "Complete": false
+  }, 
+  "Off You Go Then": {
+   "Complete": false
+  }, 
+  "Onslaught God": {
+   "Complete": false
+  }, 
+  "Onslaught Master": {
+   "Complete": false
+  }, 
+  "Onslaught Training Victory": {
+   "Complete": false
+  }, 
+  "Onslaught Wizard": {
+   "Complete": false
+  }, 
+  "Precision Bombing": {
+   "Complete": false
+  }, 
+  "Pro Boxer": {
+   "Complete": false
+  }, 
+  "Pro Football Shutout": {
+   "Complete": false
+  }, 
+  "Pro Football Victory": {
+   "Complete": false
+  }, 
+  "Pro Onslaught Victory": {
+   "Complete": false
+  }, 
+  "Pro Runaround Victory": {
+   "Complete": false
+  }, 
+  "Rookie Football Shutout": {
+   "Complete": false
+  }, 
+  "Rookie Football Victory": {
+   "Complete": false
+  }, 
+  "Rookie Onslaught Victory": {
+   "Complete": false
+  }, 
+  "Runaround God": {
+   "Complete": false
+  }, 
+  "Runaround Master": {
+   "Complete": false
+  }, 
+  "Runaround Wizard": {
+   "Complete": false
+  }, 
+  "Sharing is Caring": {
+   "Complete": false
+  }, 
+  "Stayin' Alive": {
+   "Complete": false
+  }, 
+  "Super Mega Punch": {
+   "Complete": false
+  }, 
+  "Super Punch": {
+   "Complete": false
+  }, 
+  "TNT Terror": {
+   "Complete": false
+  }, 
+  "Team Player": {
+   "Complete": true
+  }, 
+  "The Great Wall": {
+   "Complete": false
+  }, 
+  "The Wall": {
+   "Complete": false
+  }, 
+  "Uber Football Shutout": {
+   "Complete": false
+  }, 
+  "Uber Football Victory": {
+   "Complete": false
+  }, 
+  "Uber Onslaught Victory": {
+   "Complete": false
+  }, 
+  "Uber Runaround Victory": {
+   "Complete": false
+  }
+ }, 
+ "Auto Account State": "Server", 
+ "Auto Balance Teams": true, 
+ "Campaigns": {}, 
+ "Default Player Profiles": {
+  "Client Input Device #1": "__account__", 
+  "Client Input Device #2": "__account__", 
+  "Client Input Device #3": "__account__", 
+  "Client Input Device #4": "ospso", 
+  "Client Input Device #5": "sinsi pro", 
+  "Client Input Device #6": "__account__", 
+  "Client Input Device #7": "Shadow,"
+ }, 
+ "Free-for-All Playlist Randomize": true, 
+ "Free-for-All Playlist Selection": "__default__", 
+ "Free-for-All Playlists": {}, 
+ "Lang": "English", 
+ "Local Account Name": "Server22637", 
+ "PSTR": 0, 
+ "Player Profiles": {
+  "__account__": {
+   "character": "Spaz", 
+   "color": [
+    0.5, 
+    0.25, 
+    1.0
+   ], 
+   "highlight": [
+    0.5, 
+    0.25, 
+    1.0
+   ]
+  }
+ }, 
+ "Port": 43210, 
+ "Show Tutorial": false, 
+ "Signed In Last Session": false, 
+ "Team Tournament Playlist Randomize": true, 
+ "Team Tournament Playlist Selection": "xens", 
+ "Team Tournament Playlists": {
+  "xens": [
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Flag Idle Return Time": 30, 
+     "Flag Touch Return Time": 0, 
+     "Respawn Times": 1.0, 
+     "Score to Win": 3, 
+     "Time Limit": 600, 
+     "map": "Bridgit"
+    }, 
+    "type": "bsCaptureTheFlag.CTFGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": 1, 
+     "Frozen One Gets Gloves": true, 
+     "Frozen One Time": 30, 
+     "Respawn Times": 0.5, 
+     "Time Limit": 300, 
+     "map": "Crag Castle"
+    }, 
+    "type": "frozenone.FrozenOneGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "map": "Rampage"
+    }, 
+    "type": "GuessTheBomb.GuessTheBombGame"
+   }, 
+   {
+    "settings": {
+     "Hold Time": 50, 
+     "Respawn Times": 0.5, 
+     "Time Limit": 300, 
+     "map": "Roundabout"
+    }, 
+    "type": "magic_box.MagicBoxGame"
+   }, 
+   {
+    "settings": {
+     "Enable Bombs": true, 
+     "Max Mines": 60, 
+     "Mines per Second": 6, 
+     "One-Way Trip": true, 
+     "Respawn Times": 0.5, 
+     "Score to Win": 1, 
+     "Start Mines": 40, 
+     "Time Limit": 300, 
+     "map": "Football Stadium"
+    }, 
+    "type": "HazardousCargo.HazardousCargo"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Kills to Win Per Player": 5, 
+     "Respawn Times": 0.5, 
+     "Time Limit": 300, 
+     "map": "Monkey Face"
+    }, 
+    "type": "iceDeathmatch.IceDeathMatchGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Respawn Times": 1.0, 
+     "Score to Win": 3, 
+     "Time Limit": 600, 
+     "map": "Step Right Up"
+    }, 
+    "type": "bsAssault.AssaultGame"
+   }, 
+   {
+    "settings": {
+     "Balance Total Lives": false, 
+     "Epic Mode": false, 
+     "Lives Per Player": 3, 
+     "Respawn Times": 1.0, 
+     "Solo Mode": true, 
+     "Time Limit": 600, 
+     "map": "Rampage"
+    }, 
+    "type": "bsElimination.EliminationGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Kills to Win Per Player": 5, 
+     "Respawn Times": 1.0, 
+     "Time Limit": 300, 
+     "map": "Roundabout"
+    }, 
+    "type": "bsDeathMatch.DeathMatchGame"
+   }, 
+   {
+    "settings": {
+     "Respawn Times": 1.0, 
+     "Score to Win": 1, 
+     "Time Limit": 600, 
+     "map": "Hockey Stadium"
+    }, 
+    "type": "bsHockey.HockeyGame"
+   }, 
+   {
+    "settings": {
+     "Hold Time": 30, 
+     "Respawn Times": 1.0, 
+     "Time Limit": 300, 
+     "map": "Monkey Face"
+    }, 
+    "type": "bsKeepAway.KeepAwayGame"
+   }, 
+   {
+    "settings": {
+     "Balance Total Lives": false, 
+     "Epic Mode": true, 
+     "Lives Per Player": 1, 
+     "Respawn Times": 1.0, 
+     "Solo Mode": false, 
+     "Time Limit": 120, 
+     "map": "Tip Top"
+    }, 
+    "type": "bsElimination.EliminationGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Respawn Times": 1.0, 
+     "Score to Win": 3, 
+     "Time Limit": 300, 
+     "map": "Crag Castle"
+    }, 
+    "type": "bsAssault.AssaultGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Kills to Win Per Player": 5, 
+     "Respawn Times": 1.0, 
+     "Time Limit": 300, 
+     "map": "Doom Shroom"
+    }, 
+    "type": "bsDeathMatch.DeathMatchGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "map": "Rampage"
+    }, 
+    "type": "bsMeteorShower.MeteorShowerGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Flag Idle Return Time": 30, 
+     "Flag Touch Return Time": 0, 
+     "Respawn Times": 1.0, 
+     "Score to Win": 2, 
+     "Time Limit": 600, 
+     "map": "Roundabout"
+    }, 
+    "type": "bsCaptureTheFlag.CTFGame"
+   }, 
+   {
+    "settings": {
+     "Respawn Times": 1.0, 
+     "Score to Win": 21, 
+     "Time Limit": 600, 
+     "map": "Football Stadium"
+    }, 
+    "type": "bsFootball.FootballTeamGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": true, 
+     "Respawn Times": 0.25, 
+     "Score to Win": 3, 
+     "Time Limit": 120, 
+     "map": "Bridgit"
+    }, 
+    "type": "bsAssault.AssaultGame"
+   }, 
+   {
+    "settings": {
+     "Enable Impact Bombs": 1, 
+     "Enable Triple Bombs": false, 
+     "Target Count": 2, 
+     "map": "Doom Shroom"
+    }, 
+    "type": "bsTargetPractice.TargetPracticeGame"
+   }, 
+   {
+    "settings": {
+     "Hold Time": 30, 
+     "Respawn Times": 1.0, 
+     "Time Limit": 300, 
+     "map": "Tip Top"
+    }, 
+    "type": "bsKingOfTheHill.KingOfTheHillGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Respawn Times": 1.0, 
+     "Score to Win": 2, 
+     "Time Limit": 300, 
+     "map": "Zigzag"
+    }, 
+    "type": "bsAssault.AssaultGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Flag Idle Return Time": 30, 
+     "Flag Touch Return Time": 0, 
+     "Respawn Times": 1.0, 
+     "Score to Win": 3, 
+     "Time Limit": 300, 
+     "map": "Happy Thoughts"
+    }, 
+    "type": "bsCaptureTheFlag.CTFGame"
+   }, 
+   {
+    "settings": {
+     "Bomb Spawning": 1000, 
+     "Entire Team Must Finish": false, 
+     "Epic Mode": true, 
+     "Laps": 1, 
+     "Mine Spawning": 2000, 
+     "Time Limit": 300, 
+     "map": "Big G"
+    }, 
+    "type": "bsRace.RaceGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Kills to Win Per Player": 5, 
+     "Respawn Times": 1.0, 
+     "Time Limit": 300, 
+     "map": "Monkey Face"
+    }, 
+    "type": "bsDeathMatch.DeathMatchGame"
+   }, 
+   {
+    "settings": {
+     "Hold Time": 30, 
+     "Respawn Times": 1.0, 
+     "Time Limit": 300, 
+     "map": "Lake Frigid"
+    }, 
+    "type": "bsKeepAway.KeepAwayGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": false, 
+     "Flag Idle Return Time": 30, 
+     "Flag Touch Return Time": 3, 
+     "Respawn Times": 1.0, 
+     "Score to Win": 2, 
+     "Time Limit": 300, 
+     "map": "Tip Top"
+    }, 
+    "type": "bsCaptureTheFlag.CTFGame"
+   }, 
+   {
+    "settings": {
+     "Balance Total Lives": false, 
+     "Epic Mode": false, 
+     "Lives Per Player": 3, 
+     "Respawn Times": 1.0, 
+     "Solo Mode": false, 
+     "Time Limit": 300, 
+     "map": "Crag Castle"
+    }, 
+    "type": "bsElimination.EliminationGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": 1, 
+     "KOs to Win Per Player": 6, 
+     "Respawn Times": 0.5, 
+     "Time Limit": 120, 
+     "map": "Rampage"
+    }, 
+    "type": "boxing.DeathMatchGame"
+   }, 
+   {
+    "settings": {
+     "Balance Total Lives": 1, 
+     "Epic Mode": false, 
+     "Lives Per Player": 2, 
+     "Respawn Times": 0.5, 
+     "Solo Mode": false, 
+     "Time Limit": 300, 
+     "map": "Step Right Up"
+    }, 
+    "type": "bsElimination.EliminationGame"
+   }, 
+   {
+    "settings": {
+     "Epic Mode": true, 
+     "Respawn Times": 0.25, 
+     "Time Limit": 120, 
+     "map": "Zigzag"
+    }, 
+    "type": "bsConquest.ConquestGame"
+   }
+  ]
+ }, 
+ "launchCount": 6, 
+ "lc14": 1, 
+ "lc14146": 1, 
+ "lc14173": 1, 
+ "lc14292": 1, 
+ "lc14c": 1
+}
